--- a/src/main/webapp/swagger/index.html
+++ b/src/main/webapp/swagger/index.html
@@ -17,16 +17,16 @@
     <script src='lib/highlight.7.3.pack.js' type='text/javascript'></script>
 
     <script type="text/javascript">
-	$(function () {
-	    window.swaggerUi = new SwaggerUi({
-                discoveryUrl:"http://localhost:8080/rest/api-docs",
+    $(function () {
+        window.swaggerUi = new SwaggerUi({
+                discoveryUrl:"http://localhost:8080/api/docs",
                 apiKey:"special-key",
                 dom_id:"swagger-ui-container",
                 supportHeaderParams: false,
                 supportedSubmitMethods: ['get', 'post', 'put'],
                 onComplete: function(swaggerApi, swaggerUi){
-                	if(console) {
-                        console.log("Loaded SwaggerUI")
+                    if(console) {
+                        console.log("Loaded SwaggerUI");
                         console.log(swaggerApi);
                         console.log(swaggerUi);
                     }
